--- a/index.html
+++ b/index.html
@@ -8,11 +8,11 @@
     <link rel="stylesheet" href="./assets/css/custom.css">
 </head>
 <body>
-    <div class="d-flex justify-content-center align-items-center mt-2">
+    <div class="d-flex justify-content-center align-items-center mt-2 responsive">
         <div class="card-custom  w-25 vh-50 border-dark">
             <img class="card-img-top vh-25" src="./assets/img/Imagen1.png" alt="Notebook Gamer">
             <div class="card-body d-flex flex-column justify-items-center align-items-center">
-                <h5 class="card-title text-light mb-4">Laptop Gamer AMD</h5>
+                <h5 class="card-title text-light mb-4 text-center">Laptop Gamer AMD</h5>
                 <div class="justify-content-baseline">
                     <input class="rounded m-2 p-1 w-75" type="number" placeholder="Cantidad" id="user_input" oninput="this.value = Math.round(this.value)">
                     <select name="Color" id="color_selector" class="w-75 m-2 p-1 rounded">
